need to fix text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,17 @@
 	--clr-Light-Gray: hsl(204, 43%, 93%);
 	--clr-Grayish-Blue: hsl(218, 22%, 67%);
 }
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
+}
 
 html {
 	font-family: 'Karla', sans-serif;
 	font-size: 16px;
+	margin: 0;
+	padding: 0;
 }
 
 body {
@@ -22,37 +29,51 @@ body {
 	font-size: 0.875rem;
 	font-weight: 400;
 	background-color: var(--clr-Light-Gray);
-	box-sizing: border-box;
 }
 
 h2 {
 	font-size: 1.125rem;
 	font-weight: 700;
 	color: var(--clr-primary);
-	margin-bottom: 5rem;
+	margin-top: 1.5rem;
 }
 h3 {
-	font-size: 0.9375rem;
+	font-size: 1.125rem;
+	margin-block: 1rem;
+}
+
+h3,
+p {
+	margin-block: 1.5rem;
 }
 
 p {
 	color: var(--clr-Light-Gray);
 }
+li {
+	list-style: none;
+}
+
+.col {
+	display: flex;
+	align-items: center;
+}
+
 .wrapper {
-	padding: 2rem;
+	padding-inline: 2rem;
 }
 
 .card {
 	display: grid;
 	grid-template-rows: repeat(3, 1fr);
-
 	place-content: center;
 	max-width: 43rem;
-	border: 4px solid blue;
+	max-width: 20rem;
 }
 
 .hero {
 	background: #fff;
+	border-radius: 5px 5px 0 0;
 }
 
 .hero__tagline {
@@ -61,11 +82,40 @@ p {
 
 .hero__description {
 	color: var(--clr-Grayish-Blue);
+	line-height: 2.2;
 }
 
 .subscription {
 	background: var(--clr-primary);
+	color: #fff;
+}
+
+.subscription p {
+	font-size: 1rem;
+	padding-bottom: 2rem;
+}
+
+.subscription__price {
+	font-size: 2rem;
+	font-weight: 700;
+}
+
+.subscription__time {
+	margin-left: 1rem;
 	color: var(--clr-Light-Gray);
+	opacity: 0.6;
+}
+
+.subscription_btn {
+	background: var(--clr-Bright-Yellow);
+	color: #fff;
+	letter-spacing: 0.2rem;
+	display: inline-block;
+	border-radius: 5px;
+	border: none;
+	font-size: 1rem;
+	padding: 1rem 5em;
+	text-align: center;
 }
 
 .why-us {
